--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@highlightjs/vue-plugin": "^2.1.0",
     "@types/marked": "^6.0.0",
     "@vueuse/components": "^13.4.0",
     "@vueuse/core": "^13.4.0",
@@ -17,6 +18,7 @@
     "@web3-onboard/vue": "^2.10.0",
     "@web3-onboard/walletconnect": "^2.6.2",
     "ethers": "^6.14.4",
+    "highlight.js": "^11.11.1",
     "lucide-vue-next": "^0.522.0",
     "marked": "^15.0.12",
     "pinia": "^3.0.3",
