--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@web3-onboard/injected-wallets": "^2.11.3",
     "@web3-onboard/vue": "^2.10.0",
     "@web3-onboard/walletconnect": "^2.6.2",
+    "crypto-js": "^4.2.0",
     "ethers": "^6.14.4",
     "highlight.js": "^11.11.1",
     "lucide-vue-next": "^0.522.0",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "@types/crypto-js": "^4.2.2",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.21",
